--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,21 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "outDir": "./package",
+    "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "declaration": true, //emit an .d.ts definitions file with compiled JS
+    "allowJs": true, //js support
+    "noEmit": false, //set to false allow to generate files with tsc
+    "esModuleInterop": true, // import CommonJS modules in compliance with es6
+    "moduleResolution": "node",
+    "resolveJsonModule": true, //allows import json modules
+    "jsx": "preserve", //keep the JSX as part of the output to be further consumed by another transform step
+    "sourceMap": true, // Generates a source map for .d.ts files which map back to the original .ts source file
+    "sourceRoot": "/",
+    "baseUrl": "./src"
+  },
+  "include": ["**/*.ts", "**/*.tsx", "app.config.js"],
+  "exclude": ["node_modules", "package"],
+  "extends": "expo/tsconfig.base"
 }
