--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "jankowy-stories",
   "author": "ajankowy97",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "main": "./package/index.js",
   "types": "./package/index.d.ts",
   "scripts": {
     "start": "expo start",
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
+    "test": "jest",
     "build:cjs": "tsc --module commonjs",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
+  },
   "dependencies": {
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-native": "0.68.1",
     "react-native-web": "0.17.7"
   },
@@ -26,6 +29,11 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "react-test-renderer": "17.0.2",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.0.3",
+    "jest": "^26.5.1",
+    "jest-expo": "^45.0.0"
   }
 }
