--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jankowy-stories",
   "author": "ajankowy97",
   "version": "1.0.4",
-  "main": "./package/index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "types": "./package/index.d.ts",
   "scripts": {
     "start": "expo start",
@@ -27,13 +27,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5",
-    "react-test-renderer": "17.0.2",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addon-ondevice-actions": "5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
+    "@storybook/react-native": "^5.3.25",
     "@testing-library/react-native": "^9.0.0",
     "@types/jest": "^27.0.3",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.66.13",
     "jest": "^26.5.1",
-    "jest-expo": "^45.0.0"
+    "jest-expo": "^45.0.0",
+    "react-test-renderer": "17.0.2",
+    "typescript": "~4.3.5"
   }
 }
