--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jankowy-stories",
   "author": "ajankowy97",
   "version": "1.0.4",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./package/index.js",
   "types": "./package/index.d.ts",
   "scripts": {
     "start": "expo start",
@@ -27,13 +27,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@storybook/addon-actions": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.21",
     "@storybook/addon-links": "^5.3.21",
     "@storybook/addon-ondevice-actions": "5.3.23",
-    "@storybook/addon-ondevice-knobs": "^5.3.25",
-    "@storybook/react-native-server": "^5.3.23",
     "@storybook/react-native": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
+    "@storybook/addon-controls": "^6.4.22",
+    "@storybook/addon-ondevice-controls": "^6.0.1-alpha.0",
     "@testing-library/react-native": "^9.0.0",
     "@types/jest": "^27.0.3",
     "@types/react": "~17.0.21",
